# hickodns

./: .dockerignore  .env  .env.example  Cargo.toml  DESIGN_AND_DEPLOY.md  README-DEPLOY.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci-cd.yml  ci.yml
crates/agent/: Cargo.toml  Dockerfile
crates/agent/src/: main.rs
crates/control_api/: Cargo.toml  Dockerfile
crates/control_api/migrations/: 001_initial_schema.sql
crates/control_api/src/: dns_manager.rs  main.rs  validators.rs  zone_file_generator.rs
crates/geodns/: Cargo.toml
crates/geodns/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/zone_handler/: geodns.rs
deploy/dns/: named.toml  zone.example.com
deploy/prometheus/: prometheus.yml
env/: api.env  db.env  grafana.env
k8s/: control-api-deployment.yaml
web/ui/: .eslintrc.json  Dockerfile  SETUP.md  index.html  nginx.conf  package-lock.json  package.json
web/ui/src/: App.jsx  api.js  main.jsx
web/ui/src/api/: client.js
web/ui/src/components/: BulkImport.jsx  Notifications.jsx
web/ui/src/contexts/: AuthContext.jsx
web/ui/src/pages/: Login.jsx  Records.jsx
web/ui/src/pages/Admin/: Agents.jsx  AuditLogs.jsx  ConfigPush.jsx  Dashboard.jsx  GeoRules.jsx  Servers.jsx  Users.jsx  Zones.jsx
web/ui/src/store/: index.js
web/ui/tests/: debug.spec.cjs  debug_admin.spec.cjs  debug_create_zone.spec.cjs  debug_flow2.spec.cjs  debug_net_after_nav.spec.cjs  debug_records_flow.spec.cjs  e2e.comprehensive.spec.cjs  e2e.spec.cjs  playwright.config.cjs
