[package]
name = "control_api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
env_logger = "0.10"
log = "0.4"
prometheus = "0.16"
actix-web-prom = "0.6"
once-cell = "0.2"
once = "0.1"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "macros"] }
serde_qs = "0.7"
jsonwebtoken = "8"
argon2 = "0.4"
tracing = "0.2"

# Local workspace crates (integrate DNS core)
hickory-server = { path = "../server" }
hickory-resolver = { path = "../resolver", optional = true }

[profile.release]
opt-level = 3
